<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_title_reports" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_title_sales" />
        <item
            android:id="@+id/nav_branches"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_title_branches" />
        <item
            android:id="@+id/nav_delivers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_title_delivers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_title_settings" />
    </group>
</menu>